--- a/app/src/main/res/layout/activity_bierlijst.xml
+++ b/app/src/main/res/layout/activity_bierlijst.xml
@@ -20,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/kvnsbkrijgen"
+        android:id="@+id/rowinsbkrijgen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="50"
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/substractsteven" />
 
     <TextView
-        android:id="@+id/tindersbkrijgen"
+        android:id="@+id/etiennesbkrijgen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="50"
@@ -133,7 +133,7 @@
         app:srcCompat="@drawable/ic_thijs" />
 
     <TextView
-        android:id="@+id/kvnsbgeven"
+        android:id="@+id/rowinsbgeven"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="50"
@@ -169,7 +169,7 @@
         app:srcCompat="@android:drawable/button_onoff_indicator_on" />
 
     <TextView
-        android:id="@+id/tindersbgeven"
+        android:id="@+id/etiennesbgeven"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="50"
