--- a/app/src/main/res/layout/activity_statistieken.xml
+++ b/app/src/main/res/layout/activity_statistieken.xml
@@ -460,6 +460,7 @@
                 android:id="@+id/textView60"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="true"
                 android:text="Schoonmaakbier gestreept op jou"
                 android:textSize="24sp" />
 
