--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,15 +23,16 @@
         android:id="@+id/bierlijstBtn"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginStart="33dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="77dp"
         android:backgroundTint="#00FFFFFF"
         android:onClick="startBierlijst"
         android:scaleType="fitCenter"
         android:src="@drawable/beer512"
         android:tint="#000000"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.237"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/titleBierlijst" />
 
@@ -53,6 +54,7 @@
         android:onClick="startStatistieken"
         android:scaleType="centerCrop"
         android:tint="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@+id/bierlijstBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/bierlijstBtn"
         app:layout_constraintTop_toTopOf="@+id/bierlijstBtn"
