--- a/app/src/main/res/layout/activity_admin_page.xml
+++ b/app/src/main/res/layout/activity_admin_page.xml
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:onClick="verwijderDataBtn"
-        android:text="Verwijder gestreept bier"
+        android:text="Reset HV"
         app:layout_constraintStart_toStartOf="@+id/snapshotBtn"
         app:layout_constraintTop_toBottomOf="@+id/snapshotUItleg" />
 
@@ -68,7 +68,7 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hier verwijder je alle gestreepte data. \nDit zijn dingen die na elke HV weer naar nul gezet moeten worden.\nDeze knop maakt ook een snapshot van de huidige data. "
+        android:text="Hier verwijder je alle gestreepte data en de gooi statistieken. \nDit zijn dingen die na elke HV weer naar nul gezet moeten worden.\nDeze knop maakt ook een snapshot van de huidige data. "
         app:layout_constraintStart_toStartOf="@+id/resetStreepBtn"
         app:layout_constraintTop_toBottomOf="@+id/resetStreepBtn" />
 
