--- a/app/src/main/res/layout/activity_statistieken.xml
+++ b/app/src/main/res/layout/activity_statistieken.xml
@@ -34,7 +34,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Geeft bier \\ Krijgt bier"
+                android:text="Krijgt bier \\ Geeft bier"
                 android:textSize="24sp" />
 
             <TextView
